--- a/unveiling_isi_files/Analizando.ipynb
+++ b/unveiling_isi_files/Analizando.ipynb
@@ -94,15 +94,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "max_cluster = max(graph.biconnected_components().sizes())\n",
     "for i in graph.biconnected_components():\n",
     "    if len(i) == max_cluster:\n",
     "        cluster_1 = graph.subgraph(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_undirected = graph.as_undirected()\n",
+    "max_blondel = max(\n",
+    "    graph_undirected.community_multilevel(weights=None, return_levels=False).sizes()\n",
+    ")\n",
+    "for cluster in graph_undirected.community_multilevel(\n",
+    "    weights=None, return_levels=False\n",
+    "):\n",
+    "    if len(cluster) == max_blondel:\n",
+    "        cluster_blondel = graph_undirected.subgraph(cluster)"
    ]
   },
   {
@@ -114,21 +129,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = pd.DataFrame(columns=['features'])\n",
+    "features = pd.DataFrame(index=[\"records.txt\"])\n",
     "\n",
-    "for i in graph,cluster_1:\n",
+    "for i in graph,cluster_blondel:\n",
     "    if i == graph:\n",
     "        j = 'Complet'\n",
     "    else:\n",
-    "        j = 'Cluster'\n",
+    "        j = 'Blondel_C'\n",
     "    nodes = i.vcount()\n",
     "    edges = i.ecount()\n",
-    "    features.loc['Nodes '+ j] = nodes\n",
-    "    features.loc['Edges ' + j] = edges\n",
+    "    features['Nodes '+ j] = nodes\n",
+    "    features['Edges ' + j] = edges\n",
     "\n",
     "    max_degree = i.maxdegree()\n",
     "    degree = i.degree()\n",
@@ -138,39 +153,39 @@
     "    diameter = i.diameter()\n",
     "    density = i.density()\n",
     "    clusters_biconnected = len(i.biconnected_components())\n",
-    "    features.loc['Diameter '+ j] = diameter\n",
-    "    features.loc['Density '+ j] = density\n",
-    "    features.loc['Cluster biconected '+ j] = clusters_biconnected\n",
+    "    features['Diameter '+ j] = diameter\n",
+    "    features['Density '+ j] = density\n",
+    "    features['Cluster biconected '+ j] = clusters_biconnected\n",
     "\n",
     "    mean_degree = st.mean(degree)\n",
     "    sd_degree = st.stdev(degree)\n",
     "    var_degree = st.variance(degree)\n",
     "    mean_indegree = st.mean(i.indegree())\n",
     "    mean_outdegree = st.mean(i.outdegree())\n",
-    "    features.loc['Max degree '+ j] = max_degree\n",
-    "    features.loc['Sd degree '+ j] = sd_degree\n",
-    "    features.loc['Var degree '+ j] = var_degree\n",
-    "    features.loc['Mean indegree '+ j] = mean_indegree\n",
-    "    features.loc['Mean outdegree '+ j] = mean_outdegree\n",
+    "    features['Max degree '+ j] = max_degree\n",
+    "    features['Sd degree '+ j] = sd_degree\n",
+    "    features['Var degree '+ j] = var_degree\n",
+    "    features['Mean indegree '+ j] = mean_indegree\n",
+    "    features['Mean outdegree '+ j] = mean_outdegree\n",
     "\n",
     "    mean_betweenness = st.mean(betweenness)\n",
     "    sd_betw = st.stdev(betweenness)\n",
     "    var_betw = st.variance(betweenness)\n",
-    "    features.loc['Mean betweenness '+ j] = mean_betweenness\n",
-    "    features.loc['Sd betweenness '+ j] = sd_betw\n",
-    "    features.loc['var betweenness '+ j] = var_betw\n",
+    "    features['Mean betweenness '+ j] = mean_betweenness\n",
+    "    features['Sd betweenness '+ j] = sd_betw\n",
+    "    features['var betweenness '+ j] = var_betw\n",
     "\n",
     "    mean_closeness = st.mean(closeness)\n",
     "    sd_closeness = st.stdev(closeness)\n",
     "    var_closeness = st.variance(closeness)\n",
-    "    features.loc['Mean closeness '+ j] = mean_closeness\n",
-    "    features.loc['Sd closeness '+ j] = sd_closeness\n",
-    "    features.loc['Var closeness '+ j] = var_closeness"
+    "    features['Mean closeness '+ j] = mean_closeness\n",
+    "    features['Sd closeness '+ j] = sd_closeness\n",
+    "    features['Var closeness '+ j] = var_closeness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -194,233 +209,97 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>features</th>\n",
+       "      <th>Nodes Complet</th>\n",
+       "      <th>Edges Complet</th>\n",
+       "      <th>Diameter Complet</th>\n",
+       "      <th>Density Complet</th>\n",
+       "      <th>Cluster biconected Complet</th>\n",
+       "      <th>Max degree Complet</th>\n",
+       "      <th>Sd degree Complet</th>\n",
+       "      <th>Var degree Complet</th>\n",
+       "      <th>Mean indegree Complet</th>\n",
+       "      <th>Mean outdegree Complet</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Sd degree Blondel_C</th>\n",
+       "      <th>Var degree Blondel_C</th>\n",
+       "      <th>Mean indegree Blondel_C</th>\n",
+       "      <th>Mean outdegree Blondel_C</th>\n",
+       "      <th>Mean betweenness Blondel_C</th>\n",
+       "      <th>Sd betweenness Blondel_C</th>\n",
+       "      <th>var betweenness Blondel_C</th>\n",
+       "      <th>Mean closeness Blondel_C</th>\n",
+       "      <th>Sd closeness Blondel_C</th>\n",
+       "      <th>Var closeness Blondel_C</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Nodes Complet</th>\n",
+       "      <th>records.txt</th>\n",
        "      <td>2742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Edges Complet</th>\n",
        "      <td>10197</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Diameter Complet</th>\n",
        "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Density Complet</th>\n",
-       "      <td>0.00135674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cluster biconected Complet</th>\n",
+       "      <td>0.001357</td>\n",
        "      <td>13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Max degree Complet</th>\n",
        "      <td>279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sd degree Complet</th>\n",
-       "      <td>11.8604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Var degree Complet</th>\n",
-       "      <td>140.669</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean indegree Complet</th>\n",
-       "      <td>3.71882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean outdegree Complet</th>\n",
-       "      <td>3.71882</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean betweenness Complet</th>\n",
-       "      <td>21.4737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sd betweenness Complet</th>\n",
-       "      <td>187.738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>var betweenness Complet</th>\n",
-       "      <td>35245.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean closeness Complet</th>\n",
-       "      <td>0.263226</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sd closeness Complet</th>\n",
-       "      <td>0.0270164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Var closeness Complet</th>\n",
-       "      <td>0.000729885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Nodes Cluster</th>\n",
-       "      <td>2730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Edges Cluster</th>\n",
-       "      <td>10185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Diameter Cluster</th>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Density Cluster</th>\n",
-       "      <td>0.00136708</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cluster biconected Cluster</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Max degree Cluster</th>\n",
-       "      <td>279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sd degree Cluster</th>\n",
-       "      <td>11.8767</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Var degree Cluster</th>\n",
-       "      <td>141.057</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean indegree Cluster</th>\n",
-       "      <td>3.73077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean outdegree Cluster</th>\n",
-       "      <td>3.73077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean betweenness Cluster</th>\n",
-       "      <td>21.5462</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sd betweenness Cluster</th>\n",
-       "      <td>188.144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>var betweenness Cluster</th>\n",
-       "      <td>35398.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mean closeness Cluster</th>\n",
-       "      <td>0.263878</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sd closeness Cluster</th>\n",
-       "      <td>0.0267838</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Var closeness Cluster</th>\n",
-       "      <td>0.000717371</td>\n",
+       "      <td>11.860383</td>\n",
+       "      <td>140.668674</td>\n",
+       "      <td>3.718818</td>\n",
+       "      <td>3.718818</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.776501</td>\n",
+       "      <td>22.814961</td>\n",
+       "      <td>3.57037</td>\n",
+       "      <td>3.57037</td>\n",
+       "      <td>662.2</td>\n",
+       "      <td>1450.327091</td>\n",
+       "      <td>2.103449e+06</td>\n",
+       "      <td>0.238376</td>\n",
+       "      <td>0.033113</td>\n",
+       "      <td>0.001096</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               features\n",
-       "Nodes Complet                      2742\n",
-       "Edges Complet                     10197\n",
-       "Diameter Complet                      6\n",
-       "Density Complet              0.00135674\n",
-       "Cluster biconected Complet           13\n",
-       "Max degree Complet                  279\n",
-       "Sd degree Complet               11.8604\n",
-       "Var degree Complet              140.669\n",
-       "Mean indegree Complet           3.71882\n",
-       "Mean outdegree Complet          3.71882\n",
-       "Mean betweenness Complet        21.4737\n",
-       "Sd betweenness Complet          187.738\n",
-       "var betweenness Complet         35245.4\n",
-       "Mean closeness Complet         0.263226\n",
-       "Sd closeness Complet          0.0270164\n",
-       "Var closeness Complet       0.000729885\n",
-       "Nodes Cluster                      2730\n",
-       "Edges Cluster                     10185\n",
-       "Diameter Cluster                      6\n",
-       "Density Cluster              0.00136708\n",
-       "Cluster biconected Cluster            1\n",
-       "Max degree Cluster                  279\n",
-       "Sd degree Cluster               11.8767\n",
-       "Var degree Cluster              141.057\n",
-       "Mean indegree Cluster           3.73077\n",
-       "Mean outdegree Cluster          3.73077\n",
-       "Mean betweenness Cluster        21.5462\n",
-       "Sd betweenness Cluster          188.144\n",
-       "var betweenness Cluster         35398.2\n",
-       "Mean closeness Cluster         0.263878\n",
-       "Sd closeness Cluster          0.0267838\n",
-       "Var closeness Cluster       0.000717371"
+       "             Nodes Complet  Edges Complet  Diameter Complet  Density Complet  \\\n",
+       "records.txt           2742          10197                 6         0.001357   \n",
+       "\n",
+       "             Cluster biconected Complet  Max degree Complet  \\\n",
+       "records.txt                          13                 279   \n",
+       "\n",
+       "             Sd degree Complet  Var degree Complet  Mean indegree Complet  \\\n",
+       "records.txt          11.860383          140.668674               3.718818   \n",
+       "\n",
+       "             Mean outdegree Complet  ...  Sd degree Blondel_C  \\\n",
+       "records.txt                3.718818  ...             4.776501   \n",
+       "\n",
+       "             Var degree Blondel_C  Mean indegree Blondel_C  \\\n",
+       "records.txt             22.814961                  3.57037   \n",
+       "\n",
+       "             Mean outdegree Blondel_C  Mean betweenness Blondel_C  \\\n",
+       "records.txt                   3.57037                       662.2   \n",
+       "\n",
+       "             Sd betweenness Blondel_C  var betweenness Blondel_C  \\\n",
+       "records.txt               1450.327091               2.103449e+06   \n",
+       "\n",
+       "             Mean closeness Blondel_C  Sd closeness Blondel_C  \\\n",
+       "records.txt                  0.238376                0.033113   \n",
+       "\n",
+       "             Var closeness Blondel_C  \n",
+       "records.txt                 0.001096  \n",
+       "\n",
+       "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "features"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "all_paths = list() #Caminos mas largos de cada nodo.\n",
-    "for i in graph.vs.indices:\n",
-    "    equis = graph.get_all_shortest_paths(i, graph.vs.indices, mode = 'all')\n",
-    "    count = list()\n",
-    "    for j in equis:\n",
-    "        count.append(len(j))\n",
-    "    maxim = max(count)\n",
-    "    for k in equis:\n",
-    "        if len(k) == maxim:\n",
-    "            all_paths.append(k)\n",
-    "\n",
-    "count_paths = list()\n",
-    "for i in all_paths:\n",
-    "    count_paths.append(len(i))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "paths = len(all_paths)\n",
-    "mean_paths = st.mean(count_paths)\n",
-    "sd_paths = st.stdev(count_paths)\n",
-    "var_paths = st.variance(count_paths)\n",
-    "features.loc['Paths'] = paths\n",
-    "features.loc['Mean paths'] = mean_paths\n",
-    "features.loc['Sd paths'] = sd_paths\n",
-    "features.loc['Var paths'] = var_paths"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "scrolled": true
-   },
-   "source": [
-    "Raiz = graph.vs.select(\n",
-    "    lambda node: node.outdegree() == 0 and node.indegree() > 1\n",
-    ")\n",
-    "Hojas = graph.vs.select(\n",
-    "    lambda node: node.indegree() == 0 and node.outdegree() > 1\n",
-    ")"
    ]
   }
  ],
